// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage 1`] = `
<DocumentFragment>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url([object Object]);"
  />
</DocumentFragment>
`;

exports[`allows passing in a single string as the image src 1`] = `
<DocumentFragment>
  <div
    class="pf-c-background-image"
    style="--pf-c-background-image--BackgroundImage: url(/assets/images/pfbg_1200.jpg);"
  />
</DocumentFragment>
`;
